--- a/firmware/TP2_PWM_RS232.X/nbproject/Makefile-genesis.properties
+++ b/firmware/TP2_PWM_RS232.X/nbproject/Makefile-genesis.properties
@@ -1,5 +1,5 @@
 #
-#Tue Jan 17 11:25:32 CET 2023
+#Tue Jan 17 13:40:41 CET 2023
 default.languagetoolchain.version=2.50
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC32MX_DFP\\1.3.231
 conf.ids=default
@@ -8,5 +8,5 @@ host.id=2659-1vj9-c7
 configurations-xml=99d91ad0d3efad61cdac47d448d4e776
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=10848bd240cfb6abc7d759fdffba8dbe
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-proj.dir=C\:\\microchip\\harmony\\v2_06\\apps\\MINF\\TP\\TP1_PWM_AD - Copy\\firmware\\TP2_PWM_RS232.X
+proj.dir=C\:\\microchip\\harmony\\v2_06\\apps\\MINF\\TP\\TP2_PWM_RS232\\firmware\\TP2_PWM_RS232.X
 host.platform=windows
