--- a/firmware/TP2_PWM_RS232.X/nbproject/Makefile-genesis.properties
+++ b/firmware/TP2_PWM_RS232.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Tue Jan 17 14:02:51 CET 2023
+#Tue Jan 24 14:48:33 CET 2023
 default.languagetoolchain.version=2.50
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC32MX_DFP\\1.3.231
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v2.50\\bin
-host.id=2659-1vj9-c7
-configurations-xml=2ee8e354de3b6b42c9957cf3dc992091
+host.id=1qwx-ck6h-2j
+configurations-xml=5f08d6f112d20c4f25926d3a4a069ba2
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=10848bd240cfb6abc7d759fdffba8dbe
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-proj.dir=C\:\\microchip\\harmony\\v2_06\\apps\\MINF\\TP\\TP2_PWM_RS232\\firmware\\TP2_PWM_RS232.X
+proj.dir=C\:\\microchip\\harmony\\v2_06\\apps\\MINF\\TP\\TP1_PWM\\TP2_PWM_RS232\\firmware\\TP2_PWM_RS232.X
 host.platform=windows
